--- a/AShortHike.MoreSaveSlots/AShortHike.MoreSaveSlots.csproj
+++ b/AShortHike.MoreSaveSlots/AShortHike.MoreSaveSlots.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-	<LangVersion>latest</LangVersion>
+    <LangVersion>latest</LangVersion>
 
     <Title>More Save Slots</Title>
     <Product>More Save Slots</Product>
@@ -11,9 +11,10 @@
     <Description>Increase game save slots to 100 slots</Description>
     <Version>1.0.0</Version>
 
-	<TargetName>MoreSaveSlots</TargetName>
-	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <TargetName>MoreSaveSlots</TargetName>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/kavinkul/AShortHike.MoreSaveSlots</RepositoryUrl>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,7 +26,7 @@
 
     <!-- Get plugin & resources -->
     <ItemGroup>
-	  <PluginDll Include="$(TargetPath)" />
+      <PluginDll Include="$(TargetPath)" />
       <Resources Include="$(SolutionDir)\resources\**\*.*" />
     </ItemGroup>
 
@@ -46,7 +47,7 @@
     <ZipDirectory SourceDirectory="$(PublishFolder)" DestinationFile="$(PublishFolder)\..\$(TargetName).zip" Overwrite="true" />
 
   </Target>
-	
+
   <Target Name="AddGeneratedFile" BeforeTargets="BeforeCompile;CoreCompile" Inputs="$(MSBuildAllProjects)" Outputs="$(IntermediateOutputPath)GeneratedFile.cs">
 
     <!-- Create ModInfo class from relevant data -->
@@ -63,7 +64,7 @@
       <FileWrites Include="$(GeneratedFilePath)" />
     </ItemGroup>
     <WriteLinesToFile Lines="$(GeneratedText)" File="$(GeneratedFilePath)" WriteOnlyWhenDifferent="true" Overwrite="true" />
-	  
+
   </Target>
-	
+
 </Project>
