--- a/AShortHike.MoreSaveSlots/AShortHike.MoreSaveSlots.csproj
+++ b/AShortHike.MoreSaveSlots/AShortHike.MoreSaveSlots.csproj
@@ -32,7 +32,7 @@
 
     <!-- Get export directories -->
     <PropertyGroup>
-      <DevFolder>$(AppData)\itch\apps\a-short-hike\Modding\</DevFolder>
+      <DevFolder>C:\Program Files (x86)\Steam\steamapps\common\A Short Hike\Modding\</DevFolder>
       <PublishFolder>$(SolutionDir)\publish\$(TargetName)</PublishFolder>
     </PropertyGroup>
 
